# SCARAB

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/scarab/common/: bug_report.h  json_io.h  logging.h  race_candidate.h
common/src/: json_io.cpp
stage1-analyzer/: CMakeLists.txt
stage1-analyzer/include/scarab/analyzer/: access_extractor.h  alias_tracker.h  analyzer_pipeline.h  callback_extractor.h  callback_group_analyzer.h  race_candidate.h  sync_checker.h
stage1-analyzer/src/: access_extractor.cpp  alias_tracker.cpp  analyzer_pipeline.cpp  callback_extractor.cpp  callback_group_analyzer.cpp  main.cpp  race_candidate.cpp  scarab_pass.cpp  sync_checker.cpp
stage2-fuzzer/: CMakeLists.txt  package.xml
stage2-fuzzer/include/scarab/fuzzer/: dedup.h  directed_pct.h  event.h  fuzzer_engine.h  instrumented_executor.h  message_controller.h  minimizer.h  mutation.h  oracle.h  recorder.h  replayer.h  scarab_rt.h  seed.h  stderr_capture.h
stage2-fuzzer/src/: dedup.cpp  directed_pct.cpp  fuzzer_engine.cpp  instrumented_executor.cpp  main.cpp  message_controller.cpp  minimizer.cpp  mutation.cpp  oracle.cpp  recorder.cpp  replayer.cpp  scarab_rt.cpp  scarab_rt_stub.c  seed.cpp
